fix: Set DataInitializer config to dont run in test environment